style.css
.tc-bg-color, .tweet-container input {
    background-color: #15202B;
    color: white;
}

.row {
    display: flex;
    justify-content: center;
    height: 100vh;
}

#navbar, #feed-container, #side-container {
    color: white;
    line-height: 3;
    font-size: 20px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: 700;
}

#navbar {
    width: 275px;
    height: 100%;
}

.twitter-icon {
    height: 45px !important;
    width: 45px !important;
    cursor: pointer;
}

.twitter-icon:hover {
    background-color: #162D40;
    border-radius: 50%;
}

.navbar-item div {
    display: flex;
    align-items: center;
    max-width: max-content;
    padding: 0 20px;
}

.navbar-item div:hover:not(:first-child) {
    background-color: #162D40;
    color: #1DA1F2;
    border-radius: 50px;
    cursor: pointer;
}

#feed-container {
    min-width: 600px;
    border-left: 1px solid #38444D;
    border-right: 1px solid #38444D;
}

#feed-container img {
    height: 65px;
}

.home-bar {
    position: fixed;
    border-bottom: 1px solid #38444D;
    width: 600px;
    z-index: 1;
    background-color: #15202B;
    top: 0;
    padding: 0 10px;
    box-sizing: border-box;
}

.active {
    color: #1DA1F2;
}

#navbar img {
    width: 30px;
}

#navbar span {
    margin-left: 15px;
}

#feed-container .my-tweet {
    color: #9096A2;
}

input {
    width: 100%;
    position: relative;
    border: 0;
    padding: 0;
    outline: none;
}

.tweet-container {
    display: flex;
    margin-top: 70px;
}

.tweet-input, .search-input {
    width: 100%;
}

.tweet-input input {
    padding: 5px;
    box-sizing: border-box;
    font-family: sans-serif;
    font-size: 20px;
}

.tweet-input input::placeholder {
    font-size: 20px;
}

.tweet-input input:focus::placeholder {
    color: #BDC1C9;
}

.search-input input::placeholder {
    font-size: 14px;
}

.profile-icon, .home-page {
    cursor: pointer;
    padding: 0 10px;
}

.tweet-button {
    background-color: #19608E;
    border-radius: 50px;
    width: 70px;
    height: 37px;
    cursor: default;
    color: #8A8F95;
    font-size: 16px;
    display: flex;
    justify-content: center;
    align-items: center;
    float: right;
    margin-top: -37px;
    margin-right: 15px;
}

.search-container {
    width: 300px;
    padding: 0 15px;
}

.search-icon {
    width: 20px;
    display: flex;
    margin-left: 15px;
}

.search-icon img {
    width: 100%;
    height: auto;
}

.search-bar, .search-bar input {
    display: flex;
    background-color: #263442;
    color: white;
    border-radius: 50px;
    height: 25px;
    padding: 10px;
    align-items: center;
    outline: none;
    font-family: sans-serif;
    font-size: 16px;
}

.feed-division {
    height: 10px;
    background: #253341;
    margin-top: 10px;
}

.tweet-display {
    font-size: 16px;
    font-family: BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, 'Helvetica Neue', sans-serif;
    font-weight: 400;
    border-bottom: 1px solid #38444D;
    padding: 0 10px;
    cursor: pointer;
}

